<resources>
    <string name="app_name">SpaceX</string>
    <string name="company_heading">Company</string>
    <string name="company_name">SpaceX</string>
    <string name="launches_heading">Launches</string>
    <string name="company_information">%1$s was founded by %2$s in %3$s. It has now %4$s employees, %5$s launch sites, and is valued at USD %6$s </string>
    <string name="tv_mission_heading">Mission:</string>
    <string name="tv_date_time_heading">Date/time:</string>
    <string name="tv_rocket_heading">Rocket:</string>
    <string name="tv_days_heading">Days %1$s:</string>
    <string name="tv_error">Something went wrong!</string>
    <string name="error_btn_text">Try again</string>
    <string name="dialog_message">Checkout more info</string>
    <string name="dialog_article">Article</string>
    <string name="dialog_wikipedia">Wikipedia</string>
    <string name="dialog_youtube">YouTube</string>
</resources>