<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SpaceXActivity">

    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/company_name"
        app:layout_constraintEnd_toStartOf="@id/img_filter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_filter"
        android:layout_width="@dimen/filter_image"
        android:layout_height="@dimen/filter_image"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="@+id/tv_company_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_filter_alt_" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_launches"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_launches_heading" />

    <TextView
        android:id="@+id/tv_company_heading"
        style="@style/TextViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/company_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company_name" />

    <TextView
        android:id="@+id/tv_company_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company_heading"
        tools:text="The company information goes here" />

    <TextView
        android:id="@+id/tv_launches_heading"
        style="@style/TextViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launches_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_company_information" />

</androidx.constraintlayout.widget.ConstraintLayout>