<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/margin_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_patch"
            android:layout_width="@dimen/base_image"
            android:layout_height="@dimen/base_image"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_x_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.042"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_mission_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_x_large"
            android:text="@string/tv_mission_heading"
            app:layout_constraintStart_toEndOf="@+id/img_patch"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_time_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/tv_date_time_heading"
            app:layout_constraintEnd_toEndOf="@+id/tv_mission_heading"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_mission_heading"
            app:layout_constraintTop_toBottomOf="@+id/tv_mission_heading" />

        <TextView
            android:id="@+id/tv_rocket_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/tv_rocket_heading"
            app:layout_constraintEnd_toEndOf="@+id/tv_date_time_heading"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_date_time_heading"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_time_heading" />

        <TextView
            android:id="@+id/tv_days_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/tv_days_heading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_rocket_heading"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_rocket_heading"
            app:layout_constraintTop_toBottomOf="@+id/tv_rocket_heading"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_mission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_x_large"
            android:layout_marginEnd="@dimen/margin_medium"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintEnd_toStartOf="@+id/img_launch_success"
            app:layout_constraintHorizontal_bias="0.008"
            app:layout_constraintStart_toEndOf="@+id/tv_mission_heading"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tv_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="@+id/tv_mission"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_mission"
            app:layout_constraintTop_toBottomOf="@+id/tv_mission"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tv_rocket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="@+id/tv_date_time"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_date_time"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_time"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tv_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_rocket"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_rocket"
            app:layout_constraintTop_toBottomOf="@+id/tv_rocket"
            app:layout_constraintVertical_bias="0.0"
            tools:text="TextView" />

        <ImageView
            android:id="@+id/img_launch_success"
            android:layout_width="@dimen/base_image"
            android:layout_height="@dimen/base_image"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>